--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <p class="">J’ai grandi à Lucerne et très vite je me suis intéressée aux professions médicales et paramédicales. Après une première formation en Shiatsu, suivie par l’apprentissage d’autres méthodes naturelles de soin, j’ai réalisé mon diplôme en hydrothérapie du côlon. Cette méthode permet de purifier la personne jusqu’à toucher son âme.</p>
                 <p><i>Carolina Erni</i></p>
                 <div class="image-with-texture">
-                    <img src="./images/carolina-erni.png" alt="Carolina Erni" style="border-radius: 50%; object-fit: cover; width: 350px; height: 350px; display: block; margin: 0 auto; border: 0px solid #6b3b21;">
+                    <img src="./images/carolina-erni.webp" alt="Carolina Erni" style="border-radius: 50%; object-fit: cover; width: 350px; height: 350px; display: block; margin: 0 auto; border: 0px solid #6b3b21;">
                 </div>
                 <br>
                 <img src="./images/fleur-de-vie.svg" alt="fleur de vie" style="max-width:400px">
