--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
     <!-- Section Présentation -->
     <section id="presentation" class="section">
-        <div class="parallax-bg" style="background-image: url('./images/fond-2.webp'); top:-1000px"></div>
+        <div class="parallax-bg" style="background-image: url('./images/beach-2179624.jpg'); top:-1000px"></div>
         <div class="section-overlay"></div>
         <div class="container dark-box">
             <h2 class="section-title">Présentation</h2>
@@ -71,8 +71,7 @@
                 <br>
                 <img src="./images/fleur-de-vie.svg" alt="fleur de vie" style="max-width:400px">
             </div>
-            <p style="margin:3em auto 2em; font-family: cursive; font-size: 200%">« Ton corps est ton temple, conserve-le propre et pur, afin que l’âme puisse y vivre. »<br>– B.K.S. Iyengar
-            </p>
+            <p class="citation">« Ton corps est ton temple, conserve-le propre et pur, afin que l’âme puisse y vivre. »<br>— B.K.S. Iyengar</p>
         </div>
     </section>
 
@@ -276,7 +275,9 @@
             </div>
         </div>
 
-        <div style="text-align:center; margin:10rem 0 5rem"><p><small>Webmaster <a href="https://jeanmonod.net/" target="_blank">Nicolas Jeanmonod</a></small></p></div>
+        <div style="text-align:center; margin:10rem 0 5rem">
+            <p><small>Webmaster <a href="https://jeanmonod.net/" target="_blank">Nicolas Jeanmonod</a></small></p>
+        </div>
     </section>
 
     <!-- JavaScript -->
