--- a/index.html
+++ b/index.html
@@ -58,7 +58,12 @@
 
     <!-- Section Présentation -->
     <section id="presentation" class="section">
+        <!--
         <div class="parallax-bg" style="background-image: url('./images/beach-2179624.jpg'); top:-1000px"></div>
+        -->
+        <video autoplay loop muted playsinline class="parallax-bg" style="object-fit:cover; top:-800px">
+            <source src="./videos/background-video.mp4" type="video/mp4">
+        </video>
         <div class="section-overlay"></div>
         <div class="container dark-box">
             <h2 class="section-title">Présentation</h2>
@@ -67,9 +72,8 @@
                 <p><i>Carolina Erni</i></p>
                 <div class="image-with-texture">
                     <img src="./images/carolina-erni.webp" alt="Carolina Erni" style="border-radius: 50%; object-fit: cover; width: 350px; height: 350px; display: block; margin: 0 auto; border: 0px solid #6b3b21;">
+                    <img src="./images/fleur-de-vie.svg" alt="fleur de vie" style="max-width:350px; margin-top: 4em">
                 </div>
-                <br>
-                <img src="./images/fleur-de-vie.svg" alt="fleur de vie" style="max-width:400px">
             </div>
             <p class="citation">« Ton corps est ton temple, conserve-le propre et pur, afin que l’âme puisse y vivre. »<br>— B.K.S. Iyengar</p>
         </div>
