--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       "url": "https://hydrotherapie-eaux-vives.ch",
       "address": {
         "@type": "PostalAddress",
-        "streetAddress": "Av. Frontenex 34",
+        "streetAddress": "Av. de Frontenex 34",
         "addressLocality": "Genève",
         "postalCode": "1207",
         "addressCountry": "CH"
@@ -267,7 +267,7 @@
                     <div class="contact-item">
                         <img class="contact-icon" alt="Material icon" src="./icons/map_search_24dp_E3E3E3_FILL0_wght400_GRAD0_opsz24.svg">
                         <h3>Adresse du cabinet</h3>
-                        <p><a href="https://maps.app.goo.gl/WcVAAxX3e6EZfyx26">Av. Frontenex 34<br>1207 Genève</a></p>
+                        <p><a href="https://maps.app.goo.gl/WcVAAxX3e6EZfyx26">Av. de Frontenex 34<br>1207 Genève</a></p>
                     </div>
 
                     <div class="contact-item">
