--- a/preparation-hydrotherapie.html
+++ b/preparation-hydrotherapie.html
@@ -77,6 +77,7 @@
 
         li {
             margin: 0.3rem 0;
+            break-inside: avoid;
         }
 
         .footer-note {
@@ -132,7 +133,7 @@
     <div class="container">
         <h1>Préparation à votre séance d’hydrothérapie du côlon</h1>
 
-        <p class="cabinet-title">Cabinet Carolina Erni<br>Hydrothérapie & massages<br>Eaux-Vives — Genève<br><a href="https://hydrotherapie-eaux-vives.ch">hydrotherapie-eaux-vives.ch</a></p>
+        <p class="cabinet-title">Cabinet Carolina Erni<br>Hydrothérapie & massages<br>Av. de Frontenex 34 — 1207 Genève<br>+41 76 317 08 16<br><a href="https://hydrotherapie-eaux-vives.ch">hydrotherapie-eaux-vives.ch</a></p>
 
         <h2>Guide de préparation — 48 heures avant votre rendez-vous</h2>
 
@@ -197,7 +198,7 @@
         </section>
 
         <div class="footer-note">
-            <p><em>Pour toute condition médicale particulière ou prise de médicaments, consultez votre praticien·ne avant la séance.</em></p>
+            <p><em>Pour toute condition médicale particulière ou prise de médicaments,<br>consultez votre praticien·ne avant la séance.</em></p>
         </div>
     </div>
 </body>
