--- a/preparation-hydrotherapie.html
+++ b/preparation-hydrotherapie.html
@@ -180,7 +180,7 @@
             <ul>
                 <li><strong>Dernier repas :</strong> Prenez un dîner léger la veille au soir, idéalement avant 19 h</li>
                 <li><strong>Jeûne :</strong> Restez à jeun 3 heures avant la séance (eau autorisée)</li>
-                <li><strong>Médicaments :</strong> Signalez tout traitement en cours à votre praticien</li>
+                <li><strong>Médicaments :</strong> Signalez tout traitement en cours</li>
                 <li><strong>Repos :</strong> Privilégiez un sommeil de qualité</li>
                 <li><strong>Activité physique :</strong> Maintenez une activité douce (marche, étirements)</li>
             </ul>
