--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     <section id="presentation" class="section">
 
         <!-- Ne s’affiche pas si l’URL contient le paramètre `v` -->
-        <div class="parallax-bg" style="background-image: url('./images/beach-2179624.jpg'); top:-1000px"></div>
+        <div class="parallax-bg" style="background-image: url('./images/fond-2.webp'); top:-1000px"></div>
 
         <!-- S’affiche si l’URL contient le paramètre `v` -->
         <video autoplay loop muted playsinline class="parallax-bg" style="object-fit:cover; top:-800px">
@@ -321,7 +321,7 @@
                         </p>
                         <p style="text-align:center; margin-top: 1em">
                             <a href="https://colon.ch/?lang=fr">
-                                <img src="./images/colon.png" alt="logo colon.ch" style="width:100px">
+                                <img src="./images/logo-colon-ch.png" alt="logo colon.ch" style="width:100px">
                                 <br>Membre de colon.ch
                             </a>
                         </p>
