--- a/index.html
+++ b/index.html
@@ -7,53 +7,7 @@
     <title>Cabinet Carolina Erni — Hydrothérapie & massages aux Eaux-Vives à Genève</title>
     <meta name="description" content="Cabinet Carolina Erni — Hydrothérapie & massages aux Eaux-Vives à Genève">
     <meta name="keywords" content="Hydrothérapie, massages, Eaux-Vives, Genève">
-    <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "HealthAndBeautyBusiness",
-      "name": "Cabinet Carolina Erni",
-      "description": "Cabinet d’hydrothérapie et de massages aux Eaux-Vives à Genève",
-      "url": "https://hydrotherapie-eaux-vives.ch",
-      "address": {
-        "@type": "PostalAddress",
-        "streetAddress": "Av. de Frontenex 34",
-        "addressLocality": "Genève",
-        "postalCode": "1207",
-        "addressCountry": "CH"
-      },
-      "geo": {
-        "@type": "GeoCoordinates",
-        "latitude": "46.20093",
-        "longitude": "6.16543"
-      },
-      "telephone": "+41763170816",
-      "email": "hydrotherapie.eaux.vives@gmail.com",
-      "openingHoursSpecification": {
-        "@type": "OpeningHoursSpecification",
-        "dayOfWeek": ["Monday", "Tuesday", "Wednesday", "Thursday", "Friday"],
-        "opens": "08:00",
-        "closes": "18:00"
-      },
-      "priceRange": "130-200 CHF",
-      "image": "https://hydrotherapie-eaux-vives.ch/images/carolina-erni.webp",
-      "makesOffer": [
-        {
-          "@type": "Service",
-          "name": "Hydrothérapie du côlon",
-          "description": "L’hydrothérapie du côlon est une approche thérapeutique ancestrale de nettoyage du gros intestin",
-          "price": "200",
-          "priceCurrency": "CHF"
-        },
-        {
-          "@type": "Service",
-          "name": "Massage de détente",
-          "description": "Massage thérapeutique pour une relaxation profonde",
-          "price": "140",
-          "priceCurrency": "CHF"
-        }
-      ]
-    }
-    </script>
+    <script type="application/ld+json" src="hydrotherapie-eaux-vives.jsonld"></script>
     <link rel="shortcut icon" href="favicon.svg">
     <link rel="stylesheet" href="style.css">
 </head>
