--- a/static/preparation-hydrotherapie.html
+++ b/static/preparation-hydrotherapie.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Préparation à l’hydrothérapie du côlon — Cabinet Carolina Erni</title>
     <style>
+        @import url("https://fonts.googleapis.com/css2?family=Shalimar&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap");
+
         body {
-            font-family: "Segoe UI", sans-serif;
+            font-family: "Source Sans 3", monospace;
             line-height: 1.1;
             color: #333;
             max-width: 800px;
@@ -101,7 +103,8 @@
             }
         }
 
-        @media print, screen and (min-width: 768px) {
+        @media print,
+        screen and (min-width: 768px) {
             section {
                 column-count: 2;
                 column-gap: 40px;
